# CoolMicApp-Android

./: .gitignore  .gitmodules  BUILDING  README  build.gradle  import-summary.txt  local.properties
app/: build.gradle  version.properties
app/src/androidTest/java/cc/echonet/coolmicapp/test/: MainActivityBasicTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cc/echonet/coolmicapp/: AboutActivity.java  BackgroundService.java  BackgroundServiceState.java  CMTS.java  Constants.java  CoolMic.java  DatabaseHandler.java  Dialog.java  FileFormatDetector.java  MainActivity.java  MetadataDialog.java  MyService.java  PromptDialog.java  Refresh.java  ScreenReceiver.java  SettingsActivity.java  StationMetadataDialog.java  StreamStats.java  StreamStatsService.java  TextProgressBar.java  TrackMetadataDialog.java  Utils.java  VerticalSeekBar.java  audio.java  general.java  home.java  server.java
app/src/main/java/cc/echonet/coolmicdspjava/: CallbackHandler.java  InputStreamAdapter.java  VUMeterResult.java  Wrapper.java  WrapperConstants.java
app/src/main/java/com/vorbisdemo/: CoolMic.java  DatabaseHandler.java  MainActivity.java  MyService.java  Refresh.java  ScreenReceiver.java  audio.java  general.java  home.java  server.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/jni/cmake/: AddPrefix.cmake  ReadVariables.cmake
app/src/main/jni/include/libcoolmic-dsp/: coolmic-dsp.h  enc.h  iohandle.h  shout.h  simple.h  snddev.h
app/src/main/jni/include/shout/: config.h  shout.h
app/src/main/jni/libcoolmic-dsp/: Android.mk  README  coolmic-dsp.c  enc.c  iohandle.c  shout.c  simple.c  snddev.c  snddev_null.c  snddev_opensl.c  snddev_oss.c
app/src/main/jni/libcoolmic-dsp-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/jni/libcoolmic-dsp-java/: Android.mk  CMakeLists.txt  InputStreamAdapter.c  InputStreamAdapter.h  wrapper.c
app/src/main/jni/libigloo-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/jni/libigloo-android-build-wrapper/include/: config.h
app/src/main/jni/libigloo-android-build-wrapper/include/igloo/: config.h
app/src/main/jni/libogg/: Android.mk
app/src/main/jni/libogg-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/jni/libshout/: Android.mk  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  m4.patch  shout.pc  shout.pc.in  thread.c.patch
app/src/main/jni/libshout-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/jni/libshout-newer/: Android.mk
app/src/main/jni/libshout/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
app/src/main/jni/libshout/debian/: Makefile  Makefile.am  Makefile.in  changelog  control  copyright  libshout3-dev.examples  libshout3-dev.install  libshout3.install  rules  watch
app/src/main/jni/libshout/doc/: Makefile  Makefile.in  libshout.xml
app/src/main/jni/libshout/examples/: Makefile  Makefile.in  example  example.c  nonblocking  nonblocking.c
app/src/main/jni/libshout/examples/.deps/: example.Po  nonblocking.Po
app/src/main/jni/libshout/examples/.libs/: example  nonblocking
app/src/main/jni/libshout/include/: Makefile  Makefile.in
app/src/main/jni/libshout/include/shout/: Makefile  Makefile.in  shout.h  shout.h.in
app/src/main/jni/libshout/m4/: libtool.m4
app/src/main/jni/libshout/src/: Makefile  Makefile.am  Makefile.in  libshout.la  mp3.c  mp3.lo  ogg.c  ogg.lo  opus.c  opus.lo  shout.c  shout.lo  shout_ogg.h  shout_private.h  speex.c  theora.c  tls.c  util.c  util.h  util.lo  vorbis.c  vorbis.lo  webm.c  webm.lo
app/src/main/jni/libshout/src/.deps/: mp3.Plo  ogg.Plo  opus.Plo  shout.Plo  util.Plo  vorbis.Plo  webm.Plo
app/src/main/jni/libshout/src/.libs/: libshout.la  libshout.lai  libshout.so.3.2.0
app/src/main/jni/libshout/src/avl/: Makefile  Makefile.in  libiceavl.la  libiceavl_la-avl.lo
app/src/main/jni/libshout/src/avl/.deps/: libiceavl_la-avl.Plo
app/src/main/jni/libshout/src/avl/.libs/: libiceavl.la
app/src/main/jni/libshout/src/httpp/: Makefile  Makefile.in  libicehttpp.la  libicehttpp_la-httpp.lo
app/src/main/jni/libshout/src/httpp/.deps/: libicehttpp_la-httpp.Plo
app/src/main/jni/libshout/src/httpp/.libs/: libicehttpp.la
app/src/main/jni/libshout/src/net/: Makefile  Makefile.in  libicenet.la  libicenet_la-resolver.lo  libicenet_la-sock.lo
app/src/main/jni/libshout/src/net/.deps/: libicenet_la-resolver.Plo  libicenet_la-sock.Plo
app/src/main/jni/libshout/src/net/.libs/: libicenet.la
app/src/main/jni/libshout/src/thread/: Makefile  Makefile.in  libicethread.la  libicethread_la-thread.lo  thread.c
app/src/main/jni/libshout/src/thread/.deps/: libicethread_la-thread.Plo
app/src/main/jni/libshout/src/thread/.libs/: libicethread.la
app/src/main/jni/libshout/src/timing/: Makefile  Makefile.in  libicetiming.la  libicetiming_la-timing.lo
app/src/main/jni/libshout/src/timing/.deps/: libicetiming_la-timing.Plo
app/src/main/jni/libshout/src/timing/.libs/: libicetiming.la
app/src/main/jni/libshout/win32/: Makefile  Makefile.in  libshout.dsp
app/src/main/jni/libvorbis/: Android.mk
app/src/main/jni/libvorbis-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/jni/libvorbis-jni/: Android.mk  org_xiph_vorbis_encoder_VorbisEncoder.c  org_xiph_vorbis_encoder_VorbisEncoder.h
app/src/main/jni/opus/: config.h
app/src/main/jni/opus-android-build-wrapper/: Android.mk  CMakeLists.txt
app/src/main/res/drawable/: progress_bar_vertical.xml
app/src/main/res/layout/: activity_about.xml  connection_setting.xml  home.xml  home_landscape.xml  main.xml  metadata_list_entry.xml  popup_about.xml  refresh.xml  setting.xml
app/src/main/res/menu/: main_activity_menu.xml
app/src/main/res/values/: arrays.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/main/res/xml/: pref_all.xml  pref_audio.xml  pref_connection.xml  pref_general.xml  pref_headers.xml
gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
